tests/baselines/reference/conflictMarkerDiff3Trivia2.errors.txt
tests/cases/compiler/conflictMarkerDiff3Trivia2.ts(3,1): error TS1185: Merge conflict marker encountered.
tests/cases/compiler/conflictMarkerDiff3Trivia2.ts(4,6): error TS2304: Cannot find name 'a'.
tests/cases/compiler/conflictMarkerDiff3Trivia2.ts(6,1): error TS1185: Merge conflict marker encountered.
tests/cases/compiler/conflictMarkerDiff3Trivia2.ts(9,1): error TS1185: Merge conflict marker encountered.
tests/cases/compiler/conflictMarkerDiff3Trivia2.ts(12,1): error TS1185: Merge conflict marker encountered.


==== tests/cases/compiler/conflictMarkerDiff3Trivia2.ts (5 errors) ====
    class C {
      foo() {
    <<<<<<< B
    ~~~~~~~
!!! error TS1185: Merge conflict marker encountered.
         a();
         ~
!!! error TS2304: Cannot find name 'a'.
      }
    ||||||| merged common ancestors
    ~~~~~~~
!!! error TS1185: Merge conflict marker encountered.
         c();
      }
    =======
    ~~~~~~~
!!! error TS1185: Merge conflict marker encountered.
         b();
      }
    >>>>>>> A
    ~~~~~~~
!!! error TS1185: Merge conflict marker encountered.
    
      public bar() { }
    }
    